# locations

./: README.md  flake.nix
ios/: .swiftformat  README.md
ios/Locations/: AppDelegate.swift  AuthView.swift  ContentView.swift  Info.plist  LocationsApp.swift  OpenID.swift  OpenIDView.xib  OpenIDViewController.swift  SceneDelegate.swift
ios/Locations.xcodeproj/: project.pbxproj
ios/Sonar/: AuthSession.swift  AuthView.swift  AuthViewModel.swift  Info.plist  OpenIDView.xib  OpenIDViewController.swift  ResultExtensions.swift  SignedInView.swift  SonarApp.swift
ios/Sonar.xcodeproj/: project.pbxproj
ios/Sonar.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
server/: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  load_env  shell.nix
server/src/: authentication.rs  location.rs  main.rs  user.rs
server/src/auth/: authenticated_user.rs  error.rs  keys.rs  mod.rs  openid.rs
server/src/auth/openid/: jwt_validator.rs  key_set.rs
server/src/models/: mod.rs  timestamp.rs  user.rs
server/src/models/api/: contact.rs  empty.rs  error.rs  externally_exposed.rs  incoming_model.rs  mod.rs  outgoing_model.rs
server/src/models/auth/: mod.rs
server/src/models/common/: location.rs  mod.rs  ping.rs  timestamp.rs
server/src/models/storage/: mod.rs  storable.rs  user.rs
server/src/openid/: authority.rs  jwt_validator.rs  key_set.rs  mod.rs  validator.rs
server/src/routes/: mod.rs  route_result.rs
server/src/storage/: db_client.rs  location.rs  mod.rs  models.rs  mongo_manager.rs
server/test_keys/: public.pem  test_key.key
(+15 files in other folders)
