[package]
name = "sonar"
version = "0.0.1"
authors = ["Nathan Shelly <nsnshelly@gmail.com>", "Sasha Weiss <asashaweiss@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7"
reqwest = { version = "0.10", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "1f1f44f" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "1f1f44f" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "0.3.6", features = ["full"] }
tokio-compat-02 = "0.1.2"
